# jvlink-mcp-server

./: .dockerignore  .env.docker  .env.example  .gitignore  .mcpbignore  CLAUDE_DESKTOP_SETUP.md  DATABASE_SETUP.md  DB_COMPATIBILITY.md  DOCKER_SETUP.md  Dockerfile  LICENSE  QUERY_GUIDELINES.md  README.md  REMOTE_SETUP.md  SCHEMA_DOCUMENTATION.md  build-bundle.ps1  claude_app_questions.md  docker-compose.yml  docker-start.bat  docker-start.sh  install.ps1  install.sh  main.py  manifest.json  mkdocs.yml  pyproject.toml  run_comprehensive_tests.sh  run_server.py  start_server.bat  start_server.sh  test_db_compatibility.py  test_mcp_schema.py  test_missing_columns.py  test_questions.py  test_schema_coverage.py
.claude/commands/: query-example.md  questions.md
.github/workflows/: build-bundles.yml  ci.yml  docs.yml  sync-parent.yml  test.yml
data/: feature_importance.json
docs/: CLAUDE_DESKTOP_SETUP.md  DATABASE_SETUP.md  DB_COMPATIBILITY.md  DOCKER_SETUP.md  HIGH_LEVEL_API.md  REMOTE_SETUP.md  SAMPLE_QUESTIONS.md  SCHEMA_COVERAGE_REPORT.md  SCHEMA_DOCUMENTATION.md  index.md
examples/: high_level_api_example.py  query_template_usage.py
scripts/: build_bundle.py
src/jvlink_mcp_server/: __init__.py  __main__.py  server.py  server_sse.py  updater.py
tests/: comprehensive_query_patterns.py  conftest.py  test_additional_coverage.py  test_connection.py  test_db_compatibility.py  test_edge_cases.py  test_high_level_api.py  test_integration.py  test_mcp.bat  test_mcp_startup.py  test_nar_support.py  test_query_corrector.py  test_query_patterns.py  test_query_templates.py  test_updater.py
tests/live/: conftest.py  test_advanced_queries.py
(+11 files in other folders)
