[project]
name = "jvlink-mcp-server"
version = "0.1.0"
description = "JVLink MCP Server - 競馬データ分析MCPサーバー"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.1",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.21.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jvlink_mcp_server"]
